# py-cli-template

./: .flake8  .gitignore  CHANGES.md  CITATION-TEMPLATE.cff  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  SUPPORT.md  codemeta-TEMPLATE.json  codemeta.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  rename_project.sh
.github/workflows/: rename_project.yml
module_name/: __init__.py  __main__.py
project_name/: __init__.py  __main__.py
tests/: test_cli.py  test_init.py  test_version.py
