# =============================================================================
# @file    setup.cfg
# @brief   Package metadata and PyPI configuration
# @created %CREATION_DATE%
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/caltechlibrary/%REPO_NAME%
# =============================================================================

[metadata]
name          = %MODULE_NAME%
version       = 0.0.0
description   = %DESCRIPTION%
author        = %AUTHOR_NAME%
author_email  = helpdesk@library.caltech.edu
license       = https://data.caltech.edu/license
license_files = LICENSE
url           = https://github.com/caltechlibrary/%REPO_NAME%
# The remaining items below are used by PyPI.
project_urls  =
  Source Code = https://github.com/caltechlibrary/%REPO_NAME%
  Bug Tracker = https://github.com/caltechlibrary/%REPO_NAME%/issues
keywords      = Python, applications
classifiers   =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.8
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
python_requires = >= 3.8

[options.entry_points]
console_scripts = 
  %MODULE_NAME% = %MODULE_NAME%.__main__:console_scripts_main

[tool:pytest]
pythonpath = .
testpaths = tests %MODULE_NAME%
addopts = --cov=%MODULE_NAME%
